--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<aspectj.version>1.8.9</aspectj.version>
 		<java.version>1.8</java.version>
+		<docker.image.prefix>moranhat</docker.image.prefix>
 	</properties>
 
 	<dependencyManagement>
