--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,14 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.fasterxml.jackson.jaxrs</groupId>
+				<artifactId>jackson-jaxrs-json-provider</artifactId>
+				<version>2.9.5</version>
+			</dependency>
+
+			<dependency>
 				<groupId>com.moran.home.service</groupId>
-				<artifactId>home-service-models</artifactId>
+				<artifactId>home-service-dao</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
